# online-duuka-backend

./: README.md  alembic.ini  pyproject.toml  requirements.txt
.github/workflows/: smoke-tests.yml
alembic/: env.py
alembic/versions/: 20260514_0001_initial_auth_tables.py  20260514_0002_cascade_auth_token_fks.py  20260514_0003_two_factor_recovery_codes.py  20260518_1818_a8adbe723df6_describe_your_change.py  20260620_0001_add_account_lockout_fields.py
app/: __init__.py  config.py  database.py  main.py
app/core/: __init__.py  _orjson.py  celery_app.py  dependencies.py  redis_client.py  security.py  utils.py
app/models/: __init__.py  agent.py  billing.py  booster.py  chat.py  product.py  shop.py  user.py
app/routers/: auth.py  billing.py  google_oauth.py  users.py
app/schemas/: auth.py  billing.py  google_oauth.py
app/services/: __init__.py  auth_service.py  cache_service.py  email_service.py  google_oauth.py  pesapal_service.py  turnstile_service.py  verification_service.py
app/tasks/: email_tasks.py
scripts/: smoke_auth_user.py
src/: .env.local  .env.prod  alembic.ini  main.py
src/apps/auth/: _jwt.py  authentication.py  dependencies.py  router.py  schema.py  security.py  tasks.py  utils.py  validators.py
src/core/: _orjson.py  cache.py  celery_app.py  config.py  db.py  mailers.py  turnstile.py  utils.py
src/core/image/: image_types.py  service.py  validator.py  watermark.py
src/core/storage/: file_storage.py
src/migrations/: env.py  script.py.mako
src/migrations/versions/: 20260514_0001_initial_auth_tables.py  (+3 more)
(+44 files in other folders)
