[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosmtplib>=5.1.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "bcrypt==4.0.1",
    "celery>=5.6.3",
    "cryptography>=48.0.0",
    "djangorestframework-simplejwt>=5.5.1",
    "fastapi[standard]>=0.136.1",
    "google-auth>=2.52.0",
    "jose>=1.0.0",
    "ninja2>=0.1",
    "passlib>=1.7.4",
    "pillow>=12.2.0",
    "psycopg2-binary>=2.9.12",
    "pyjwt>=2.12.1",
    "pyotp>=2.9.0",
    "qrcode[pil]>=8.2",
    "redis>=7.4.0",
    "slowapi>=0.1.9",
    "sqlmodel>=0.0.38",
]
